# klassic

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  README.md  TYPECLASS_STATUS.md  build.sbt  grammar.md  install.ps1  install.sh  release.sbt  scratch.txt  sketch.md  test-not.kl  test_simple_typeclass.kl  test_typeclass.kl  version.sbt
.claude/: settings.local.json
.github/: CODEOWNERS
crates/klassic-eval/: Cargo.toml
crates/klassic-eval/src/: builtin_registry.rs  builtin_support.rs  environment.rs  lib.rs  ops.rs  runtime_types.rs  value.rs
crates/klassic-runtime/: Cargo.toml
crates/klassic-runtime/src/: builtins.rs  error.rs  fs.rs  lib.rs  rt.rs  stdlib_bundle.rs  system.rs
docs/: architecture-rust.md  implementation-notes.md  llvm-backend-plan.md  native-backend-strategy.md  native-coverage.md  releasing.md  roadmap-targets-stdlib.md  rust-port-notes.md  spec-matrix.md  true-zgc-plan.md  zgc-plan.md
example/: desktop.kl
examples/: builtin_functions.toys  complex-heredoc.toys  heredocs.toys  hereexp.toys  json-inspect.kl  list-literal.kl  neta-heredoc.toys  object.toys  stdlib-v0.2-demo.kl  strinterp.toys  typeclass-complete.kl  typeclass-dictionary-passing.md  typeclass-final-example.kl  typeclass-full.kl
project/: plugins.sbt
src/: cli.rs  main.rs
stdlib/: prelude.kl
test-programs/: arrow-kind-test.kl  block-comment.kl  boolean-literal.kl  builtin_functions-interop.kl  builtin_functions-list.kl  builtin_functions-thread.kl  builtin_functions.kl  cleanup-expression.kl  complex-heredoc.kl  debug-hkt.kl  distance.kl  fanction-def-fact.kl  file-input.kl  file-output.kl  function-params-evaluation-count.kl  (+46 more)
(+611 files in other folders)
