[package]
name = "klassic-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
klassic-span = { path = "../klassic-span" }
klassic-syntax = { path = "../klassic-syntax" }
klassic-rewrite = { path = "../klassic-rewrite" }
klassic-types = { path = "../klassic-types" }
klassic-runtime = { path = "../klassic-runtime" }

[lib]
path = "src/lib.rs"
